tests/macro-tests/cases/widget/type_path_malformed1.stderr
error: unexpected end of input, expected identifier
 --> cases/widget/type_path_malformed1.rs:3:17
  |
3 | #[widget($crate::)]
  |                 ^
