tests/macro-tests/cases/widget/type_path_malformed1.rs
use zng::prelude_wgt::{WidgetBase, widget};

#[widget($crate::)]
pub struct TestWidget(WidgetBase);

fn main() {}
